Fix MangaList Overflow, top-position

--- a/tranga-website/src/App.css
+++ b/tranga-website/src/App.css
@@ -8,8 +8,6 @@
 
 .app-content {
   position: absolute;
-  height: calc(100% - 60px);
-  top: 60px;
   width: 100%;
   left: 0;
 }
