--- a/tranga-website/src/Header.css
+++ b/tranga-website/src/Header.css
@@ -1,5 +1,6 @@
 .header {
-    position: static !important;
+    position: sticky !important;
+    z-index: 1000;
     top: 0;
     left: 0;
     width: 100%;
